@@ -1,11 +1,11 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Lingua-AR-Db
-version:      1.5
+version:      1.51
 version_from: lib/Lingua/AR/Db.pm
 installdirs:  site
 requires:
-    Lingua::AR::Word:              1.4
+    Lingua::AR::Word:              1.5
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
