@@ -5,7 +5,7 @@ use ExtUtils::MakeMaker;
 WriteMakefile(
     NAME              => 'Lingua::AR::Db',
     VERSION_FROM      => 'lib/Lingua/AR/Db.pm', # finds $VERSION
-    PREREQ_PM         => {'Lingua::AR::Word' => 1.4},
+    PREREQ_PM         => {'Lingua::AR::Word' => 1.5},
     ($] >= 5.005 ?     ## Add these new keywords supported since 5.005
       (ABSTRACT_FROM  => 'lib/Lingua/AR/Db.pm', # retrieve abstract from module
        AUTHOR         => 'Andrea Benazzo <andy@slacky.it>') : ()),
