@@ -1,7 +1,13 @@
 			<< Lingua::AR::Db - Andrea Benazzo >>
 
-23/06/2005
-->chenged namespace into Lingua::AR::
+25/06/2005	1.51
+->added tests
+
+24/06/2005	1.5
+->modified some little parts in Lingua::AR::Word, so I needed to change them even in Lingua::AR::Db
+
+23/06/2005	1.4
+->changed namespace into Lingua::AR::
 
 21/06/05	1.3
 ->Created this OO module for managing the DB
